[package]
name = "gallon"
version = "0.1.0"
description = "An obvious, minimal package manager on Windows"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["cargo"] }
reqwest = { version = "0.11.13", features = ["blocking"]}
decompress = "0.2.0"